# Cosmic-Connect-Applet-UI

./: .gitignore  Cargo.toml  README.md  io.github.M4LC0ntent.Cosmic-Connect-UI.json  justfile
cosmic-connect-applet/: Cargo.toml
cosmic-connect-applet/src/: backend.rs  lib.rs  main.rs  messages.rs  models.rs  notifications.rs  portal.rs
cosmic-connect-applet/src/plugins/sms/: app.rs  dbus.rs  mod.rs  views.rs
cosmic-connect-applet/src/ui/: popup.rs
kdeconnect-adapter/: Cargo.toml
kdeconnect-adapter/src/: .gitignore  device_manager.rs  events.rs  lib.rs  plugin_adapter.rs
kdeconnect-dbus-client/src/: lib.rs
kdeconnect-service/: Cargo.toml
kdeconnect-service/src/: dbus_interface.rs  main.rs
resources/: io.github.M4LC0ntent.Cosmic-Connect-UI.desktop  io.github.M4LC0ntent.Cosmic-Connect-UI.metainfo.xml
