# Cargo.toml (workspace root)

[workspace]
members = [
    "kdeconnect-adapter",
    "cosmic-connect-applet",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
# Common dependencies used across multiple crates
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
ashpd = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# External kdeconnect-core from hepp3n
# kdeconnect-core = { git = "https://github.com/hepp3n/kdeconnect.git" }
# Using forked repo until pull request is accepted.
kdeconnect-core = { git = "https://github.com/M4L-C0ntent/kdeconnect.git", branch = "M4L-C0ntent-patch-1" }
# Local crates
kdeconnect-adapter = { path = "./kdeconnect-adapter" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
