# Cargo.toml (workspace root)

[workspace]
members = [
    "kdeconnect-adapter",
    "cosmic-connect-applet",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
# Common dependencies used across multiple crates
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
ashpd = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# External kdeconnect-core from hepp3n
# Pulling from Forked Repo for Testing
kdeconnect-core = { git = "https://github.com/M4L-C0ntent/kdeconnect.git", branch = "testing" }
# Disabled for Testing Repo
#kdeconnect-core = { git = "https://github.com/hepp3n/kdeconnect.git" }

# Local crates
kdeconnect-adapter = { path = "./kdeconnect-adapter" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
