# kdeconnect-service/Cargo.toml
[package]
name = "kdeconnect-service"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "kdeconnect-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# Local dependencies
kdeconnect-adapter = { path = "../kdeconnect-adapter" }
# temp disabled for testing
# kdeconnect-core = { git = "https://github.com/hepp3n/kdeconnect.git" }
# Using forked testing branch
kdeconnect-core = { git = "https://github.com/M4L-C0ntent/kdeconnect.git", branch = "testing" }
